# bee1006

apps/ci_lab/fsw/src/: ci_lab_app.c
apps/rpt/config/: default_rpt_interface_cfg.h
apps/to_lab/fsw/src/: to_lab_app.c
apps/utrx/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
apps/utrx/config/: default_utrx_app_fcncodes.h  default_utrx_app_interface_cfg.h  default_utrx_app_internal_cfg.h  default_utrx_app_mission_cfg.h  default_utrx_app_msg.h  default_utrx_app_msgdefs.h  default_utrx_app_msgids.h  default_utrx_app_msgstruct.h  default_utrx_app_perfids.h  default_utrx_app_platform_cfg.h  default_utrx_app_tbl.h  default_utrx_app_tbldefs.h  default_utrx_app_tblstruct.h  default_utrx_app_topicids.h
apps/utrx/device/inc/: utrx.h  utrx_conf.h
apps/utrx/device/src/: utrx.c
apps/utrx/fsw/inc/: utrx_app_eventids.h
apps/utrx/fsw/src/: utrx_app.c  utrx_app.h  utrx_app_cmds.c  utrx_app_cmds.h  utrx_app_dispatch.c  utrx_app_dispatch.h  utrx_app_eds_dispatch.c  utrx_app_utils.c  utrx_app_utils.h  utrx_app_version.h  utrx_cmds_ax100.c  utrx_cmds_ax100.h
apps/utrx/fsw/tables/: utrx_app_tbl.c
cfe/modules/core_api/fsw/inc/: cfe_rf.h  cfe_srl_error.h
cfe/modules/rf/fsw/src/: cfe_rf_typedef.h
cfe/modules/srl/config/: default_cfe_srl_mission_cfg.h  default_cfe_srl_msgdefs.h
cfe/modules/srl/fsw/src/: cfe_srl_api.c  cfe_srl_basic.h  cfe_srl_init.c  cfe_srl_task.c
sample_defs/: Interface_config.json  cpu1_cfe_es_startup.scr  obc_cfe_es_startup.scr  targets.cmake
submodules/libgscsp/: .lock-waf_linux_build
submodules/libgscsp/lib/libgosh_client/: waf
tools/cFS-GroundSystem/Subsystems/cmdGui/: CHeaderParser-hdr-paths.txt  command-pages.txt
tools/cFS-GroundSystem/Subsystems/cmdGui/CommandFiles/: UTRX_GET  UTRX_SEND_HK  UTRX_SET
tools/cFS-GroundSystem/Subsystems/cmdGui/ParameterFiles/: UTRX_RXCONF_SET_BAUD_CC  UTRX_RXCONF_SET_FREQ_CC  UTRX_TXCONF_SET_BAUD_CC  UTRX_TXCONF_SET_FREQ_CC
